crates/jarl/tests/integration/snapshots/integration__toml__toml_select_and_ignore.snap
---
source: crates/jarl/tests/integration/toml.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").run().normalize_os_executable_name().normalize_temp_paths()"
---
success: false
exit_code: 1
----- stdout -----
warning: any_is_na
 --> test.R:1:1
  |
1 | any(is.na(x))
  | ^^^^^^^^^^^^^ `any(is.na(...))` is inefficient.
  |
help: Use `anyNA(...)` instead.

warning: any_duplicated
 --> test.R:2:1
  |
2 | any(duplicated(x))
  | ^^^^^^^^^^^^^^^^^^ `any(duplicated(...))` is inefficient.
  |
help: Use `anyDuplicated(...) > 0` instead.

Found 2 errors.
2 fixable with the `--fix` option.

----- stderr -----

----- args -----
check .
