crates/jarl/tests/integration/snapshots/integration__toml__toml_unfixable_with_group.snap
---
source: crates/jarl/tests/integration/toml.rs
expression: fixed_contents
---
any(is.na(x))
any(duplicated(x))
nlevels(x)
