crates/jarl/tests/integration/snapshots/integration__toml__whitespace_only_in_toml_select.snap
---
source: crates/jarl/tests/integration/toml.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").run().normalize_os_executable_name().normalize_temp_paths()"
---

success: false
exit_code: 255
----- stdout -----

----- stderr -----
jarl failed
  Cause: Unknown rules in field `select` in 'jarl.toml': "" (empty or whitespace-only not allowed)

----- args -----
check .
